# capstone-localization-engine

./: .env  .gitignore  BUILD_DESKTOP_APP.md  IPS Platform.bat  IPS Platform.spec  README.md  api_server.py  config.yaml  desktop_app.py  desktop_requirements.txt  index.html  poll.py  processing_engine.py  radiomap.json  requirements.txt  run_agent.ps1  run_api.ps1  survey.py  telemetry_agent.py  telemetry_log.csv
Hybrid/: CMakeLists.txt  Dockerfile  config.yaml  requirements.txt
Hybrid/core_cpp/: bindings.cpp
Hybrid/core_cpp/engines/: fingerprint_engine.cpp  fingerprint_engine.h  rssi_engine.cpp  rssi_engine.h  tof_engine.cpp  tof_engine.h
Hybrid/core_cpp/math_core/: geometry.cpp  geometry.h  knn_matrix.cpp  knn_matrix.h  signal_filters.cpp  signal_filters.h  trilateration.cpp  trilateration.h
Hybrid/core_cpp/parsers/: telnet_parser.cpp  telnet_parser.h
Hybrid/src_python/: app.py  cloud_io.py  data_pipes.py  engine_wrappers.py  models.py
Hybrid/tests/: test_capstone_core.py
OG/: config.yaml  models.py  parse_apscan.py  preprocessing.py  processing_engine.py  requirements.txt  telemetry_agent.py  trilateration.py
platform/: docker-compose.yml
platform/backend/: Dockerfile  main.py  requirements.txt
platform/backend/api/: config.py  devices.py  hierarchy.py  logs.py  schemas.py
platform/backend/config_gen/: generator.py
platform/backend/engine_mgr/: docker_ctl.py
platform/backend/models/: __init__.py  anchor.py  base.py  building.py  campus.py  floor.py  log.py  room.py  tag.py
platform/frontend/: index.html  package.json
platform/frontend/electron/: main.js  preload.js
platform/frontend/public/: index.html
